--- a/.github/workflows/api_ci copy.yml
+++ b/.github/workflows/api_ci copy.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Build Docker image
       uses: docker/build-push-action@v2
       with:
-        context: applications/api/
-        file: ./Dockerfile
+        context: .
+        file: ./applications/api/Dockerfile
         push: false
         tags: ${{ env.DOCKER_IMAGE }}
 
