--- a/.github/workflows/web_ci.yml
+++ b/.github/workflows/web_ci.yml
@@ -1,4 +1,4 @@
-name: Web Application CI
+name: WEB Application CI
 
 on: 
   push:
@@ -13,27 +13,23 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       DOCKER_IMAGE: 'matheusmazzoni/descomplica-web:${{ github.sha }}'
+    defaults:
+      run:
+        working-directory: applications/web/
     steps:
+
     - name: Checkout
       uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
 
     - name: Load Docker cache layers
       uses: satackey/action-docker-layer-caching@v0.0.11
       continue-on-error: true
 
     - name: Build Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./applications/web/Dockerfile
-        push: false
-        tags: ${{ env.DOCKER_IMAGE }}
+      run: docker image build --file .Dockerfile --tag ${{ env.DOCKER_IMAGE }}
 
     - name: Test Application
-      run: yarn test
+      run: docker container run --rm ${{ env.DOCKER_IMAGE }} yarn test
       # Continuar, pois não foi implementado tests com jest
       continue-on-error: true
     
