--- a/.github/workflows/api_ci copy.yml
+++ b/.github/workflows/api_ci copy.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env: 
-      DOCKER_IMAGE: 'matheusmazzoni/descomplica-api:${{ github.sha }}'
+      DOCKER_IMAGE: '${{ secrets.DOCKERHUB_USERNAME }}/descomplica-api:${{ github.sha }}'
     defaults:
       run:
         working-directory: applications/api/
@@ -26,6 +26,8 @@ jobs:
       continue-on-error: true
 
     - name: Build Docker image
+      env:
+        DOCKER_BUILDKIT: 1
       run: docker image build . --file Dockerfile --tag ${{ env.DOCKER_IMAGE }}
 
     - name: Test Application
@@ -33,5 +35,11 @@ jobs:
       # Continuar, pois não foi implementado tests com jest
       continue-on-error: true
     
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Push to docker repository
       run: docker image push ${{ env.DOCKER_IMAGE }}
